--- a/dashboard.html
+++ b/dashboard.html
@@ -176,7 +176,7 @@
                                     Marine Debris Risk Heatmap
                                 </h4>
                                 <p class="text-muted mb-0" id="mapDescription">
-                                    Interactive heatmap showing pollution risk zones across Malaysia
+                                    Precise river basin shapes with intelligent clustering. Click zones for detailed pollution risk insights.
                                 </p>
                             </div>
                             <div class="d-flex gap-2">
@@ -199,7 +199,7 @@
                                         <div class="text-center">
                                             <i class="fas fa-fire fa-3x mb-3"></i>
                                             <p>Loading interactive heatmap...</p>
-                                            <small class="text-muted">Click on zones for detailed insights</small>
+                                            <small class="text-muted">Organic shapes represent pollution risk zones</small>
                                         </div>
                                     </div>
                                 </div>
