--- a/dashboard.html
+++ b/dashboard.html
@@ -146,11 +146,10 @@
                                         <div class="filter-group">
                                             <label class="form-label">&nbsp;</label>
                                             <div class="d-flex gap-2">
-                                                <button type="button" class="btn btn-primary flex-fill filter-btn filter-btn-primary" id="applyFiltersBtn" onclick="applyMapFilters()">
-                                                    <i class="fas fa-filter me-1"></i>
+                                                <button type="button" class="btn btn-primary flex-fill filter-btn filter-btn-primary btn-apply-filters inactive" id="applyFiltersBtn" onclick="applyMapFilters()">
                                                     Apply
                                                 </button>
-                                                <button type="button" class="btn btn-outline-secondary flex-fill filter-btn" onclick="clearFilters()">
+                                                <button type="button" class="btn btn-outline-secondary flex-fill filter-btn btn-clear-filters" onclick="clearFilters()">
                                                     <i class="fas fa-times me-1"></i>
                                                     Clear
                                                 </button>
